--- a/config-client-development.properties
+++ b/config-client-development.properties
@@ -1,5 +1,5 @@
 user.role=Developer
-user.alias=sotobotero
+user.alias=edison
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:product
 spring.datasource.username=sa
