--- a/config-client-production.properties
+++ b/config-client-production.properties
@@ -1,5 +1,5 @@
 user.role=sysadmin
-user.alias=sotobotero
+user.alias=edison
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
